# Sirs-ThisVid-Ripper

./: LICENSE  README (1).md  README.md  pyproject.toml  requirements.txt  run.bat  run.sh  thisvid_scraper.py
src/sirsthisvid/: __init__.py
src/sirsthisvid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
