[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sirsthisvid"
version = "2.1.1"
description = "Bulk download videos from ThisVid"
readme = "README.md"
license = {text = "CC0-1.0"}
authors = [
    {name = "Sir Dominic Scott", email = "sir@sirdominic.scot"}
]
keywords = ["thisvid", "downloader", "video", "bulk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "yt-dlp>=2023.1.1",
]

[project.urls]
Homepage = "https://github.com/sdc88/Sirs-ThisVid-Ripper"
Repository = "https://github.com/sdc88/Sirs-ThisVid-Ripper"
Issues = "https://github.com/sdc88/Sirs-ThisVid-Ripper/issues"

[project.scripts]
sirsthisvid = "sirsthisvid:run"

[tool.setuptools.packages.find]
where = ["src"]
